theme/solarized/static/css/default.css
body {
    background-color: #fdf6e3;
    font-family:Courier New,monospace;
    font-size: 95%;
    color: #073642;
    word-break: normal;
    max-width: 960px;
    margin: 0 auto;
    padding: 0;
}

html {
    margin-left: 4px;
    margin-right: 4px;
}

@media (min-width: 10px) {
    body { font-size: 65%; }
}
@media (min-width: 750px) {
    body { font-size: 95%; }
}


a:link {
  color:#268bd2;
  text-decoration: none;
  font-weight: bold;
}
a:visited {
  color:#268bd2;
  text-decoration: none;
  font-weight: bold;
}
a:active {
  color:#268bd2;
  text-decoration: none;
  font-weight: bold;
}
a:hover {
  text-decoration: none;
  color:#268bd2;
  font-weight: bold;
}

h1 {
    color: #cb4b16;
    text-decoration: none;
    margin-top: 50px;
}

h2 {
    color: #cb4b16;
    text-decoration: none;
    margin-top: 40px;
}

h3 {
    color: #cb4b16;
    text-decoration: none;
    margin-top: 30px;
}

h4 {
    color: #cb4b16;
    text-decoration: none;
    margin-top: 20px;
}

ol.blog {
  list-style-type: none;
  color:#657b83;
}
ol.blog li:before {
  content: '-';
  position: absolute;
  margin-left: -20px;
}
ol.blog li {
  margin-top: 5px;
}

pre {
  overflow-x: auto;
  white-space: pre-wrap;
  white-space: -moz-pre-wrap;
  white-space: -pre-wrap;
  white-space: -o-pre-wrap;
  word-wrap: break-word;
}

p {
  line-height: 1.5;
  text-align: justify;
  text-justify: inter-word;
  text-align-last: left;
}

img {
  height: 100%;
  width: 100%;
  object-fit: contain;
}

code {
    margin: 0 -0.4em;
    padding: 0.1em 0.4em;
    font-size: 1.1em;
    font-weight: bold;
    border-radius:5px;
    background-color: #dcdcdc;
}

pre > code {
    margin: initial;
    padding: initial;
    font-size: 1.25em;
    font-weight: 550;
    line-height: initial;
    background-color: initial;
    font-family:monospace;
}

div.highlight {
  background-color: #eee8d5;
  padding: 5px;
}

.admonition {
  width: 98%;
  padding: 5px;
  position: relative;
  border-radius: 5px;
  box-shadow: 0 0 10px 5px #ccc;
  margin-top: 20px;
  margin-bottom: 20px;
}

.admonition.attention {
  background-color: #eee8d5;
  border-left: 5px solid #fbc02d;
}

.admonition.caution {
  background-color: #eee8d5;
  border-left: 5px solid #f57c00;
}

.admonition.danger {
  background-color: #eee8d5;
  border-left: 5px solid #d32f2f;
}

.admonition.error {
  background-color: #eee8d5;
  border-left: 5px solid #d32f2f;
}

.admonition.hint {
  background-color: #eee8d5;
  border-left: 5px solid #689f38;
}

.admonition.important {
  background-color: #eee8d5;
  border-left: 5px solid #e64a19;
}

.admonition.note {
  background-color: #eee8d5;
  border-left: 5px solid #2aa198;
}

.admonition.tip {
  background-color: #eee8d5;
  border-left: 5px solid #388e3c;
}

.admonition.warning {
  background-color: #eee8d5;
  border-left: 5px solid #fbc02d;
}

div.article-date {
   text-align: right;
}

div.tags {
  color:#839496;
  display:inline;
  font-weight: bold;
}

::selection {
  background: #ffbdbd;
}

div.title h1  {
  color:#000000;
  text-decoration: underline double #586e75;
  text-underline-position: under;
  text-decoration-thickness: 10%;
}

.tile-container{
  position: relative;
  margin: 5px 0px;
  width:100%;
  font-size:0; /* add */
}

.tile{
  font-size:12px; /* or whatever you want */
  width: 33%;
  min-height:22px;
  display: inline-block;
  text-align: center;
}

.tile > a{
  text-decoration: none;
  background-color:#fdf6e3;
  color:#586e75;
  font-size: 16px;
  font-weight: bold;
}
.tile > a:hover{
  text-decoration: none;
  background-color:#fdf6e3;
  color:#586e75;
  font-size: 16px;
  font-weight: bold;
}

